# taskmaster

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.yml  config_minimal.yml
.cargo/: config.toml
.github/hooks/: pre-commit
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: cmd.rs  lib.rs  macros.rs  request.rs  response.rs  server.rs
common/src/cmd/: class.rs  error.rs  error_kind.rs
common/src/server/: class.rs  (+4 more)
ctl/: Cargo.toml
ctl/examples/: client.rs  client2.rs
ctl/src/: client.rs  lib.rs  main.rs
ctl/src/client/: class.rs  client_class.rs
daemon/: Cargo.toml
daemon/examples/: command_creation.rs  parsing.rs  server.rs
daemon/src/: backend.rs  config.rs  defs.rs  lib.rs  main.rs  request_factory.rs  server.rs  signal_handling.rs  taskmaster.rs
daemon/src/backend/: class.rs  client.rs  command_actions.rs  commands.rs  handlers.rs  print_functions.rs  process.rs  program.rs
daemon/src/backend/process/: class.rs  logging.rs  status.rs  tests.rs  time_stub.rs
daemon/src/config/: error.rs  structs.rs
daemon/src/config/structs/: file_handler.rs  program.rs  program_status.rs  restart_option.rs  signals.rs
daemon/src/taskmaster/: class.rs  client.rs  request.rs  request_factory.rs  status.rs
logger/: Cargo.toml
logger/examples/: logger.rs
logger/src/: class_logger.rs  colors.rs  lib.rs  log_level.rs  logger.rs
masterlib/: Cargo.toml
masterlib/src/: config.rs  daemon.rs  lib.rs
miniterm/: Cargo.toml
miniterm/examples/: putch.rs
miniterm/src/: lib.rs  term.rs
src/: main.rs
src/config/: mod.rs
(+23 files in other folders)
