# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ctl"
path = "bin/main.rs"

[lib]
name = "ctl"
path = "src/lib.rs"

[dependencies]
libc = ">=0.2"
common = { path = "../common" }
