# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "bin/main.rs"

[lib]
name = "daemon"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
libc = { workspace = true }
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "0.9.*"
